Updated User interface
Removed buttons to scores, and made a single test button.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
-            android:name=".GyroscopeTestActivity"
+            android:name=".TestEnvironmentActivity"
             android:label="@string/title_activity_gryoscope_test"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
